[tool.poetry]
name = "gemini-ai-main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9, <3.12"

python-telegram-bot = {extras = ["webhooks"], version = "^22.1"}
google-generativeai = "^0.9.0"
duckduckgo-search = "^8.0.4"
pytz = "^2025.2"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
youtube-transcript-api = "^1.1.0"
pdfminer-six = "^20250506"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"